--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,9 +13,8 @@
     padding: 20rem 0;
     background-image: linear-gradient(
         to right bottom,
-        rgba($color-primary-light, 0.7),
-        rgba($color-primary-dark, 0.7)),
-    url(../img/secondary.jpg);
+        $color-primary-light,
+        $color-primary-dark);
     background-size: cover;
     transform: skewY(-7deg);
     margin-top: -10rem;
