--- a/css/style.css
+++ b/css/style.css
@@ -113,12 +113,9 @@ body {
 
 .heading-secondary {
   font-size: 2.5rem;
-  text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, #43e68c, #1d8b66);
-  -webkit-background-clip: text;
-  color: transparent;
+  color: #767676;
   letter-spacing: .2rem;
   transition: all .2s; }
   @media only screen and (max-width: 56.25em) {
@@ -130,13 +127,10 @@ body {
   .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
-  .heading-secondary--white {
-    background-image: linear-gradient(to right, #f7f7f7, #eee); }
 
 .heading-tertiary {
   font-size: 1.6rem;
-  font-weight: 700;
-  text-transform: uppercase; }
+  font-weight: 700; }
 
 .paragraph {
   font-size: 1.6rem; }
@@ -215,14 +209,14 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn--white {
-  background-color: #fff;
+  background-color: #8277FF;
   color: #777; }
   .btn--white::after {
-    background-color: #fff; }
+    background-color: #8277FF; }
 
 .btn--green {
   background-color: #43e68c;
-  color: #fff; }
+  color: #8277FF; }
   .btn--green::after {
     background-color: #43e68c; }
 
@@ -244,15 +238,15 @@ body {
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
-  color: #43e68c;
+  color: #8277FF;
   display: inline-block;
   text-decoration: none;
-  border-bottom: 1px solid #43e68c;
+  border-bottom: 1px solid #8277FF;
   padding: 3px;
   transition: all .2s; }
 
 .btn-text:hover {
-  background-color: #43e68c;
+  background-color: #8277FF;
   color: #fff;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   transform: translateY(-2px); }
@@ -352,7 +346,7 @@ body {
     font-size: 6rem;
     margin-bottom: .5rem;
     display: inline-block;
-    background-image: linear-gradient(to right, #98ffcb, #1d8b66);
+    background-image: linear-gradient(to right, #B0FAD5, #1d8b66);
     -webkit-background-clip: text;
     color: transparent; }
     @media only screen and (max-width: 56.25em) {
@@ -466,7 +460,7 @@ body {
 
 .header {
   height: 85vh;
-  background-image: linear-gradient(to right bottom, #98ffcb, #1d8b66);
+  background-image: linear-gradient(to right bottom, #B0FAD5, #43e68c);
   background-size: cover;
   background-position: top;
   position: relative; }
@@ -477,7 +471,7 @@ body {
       height: 95vh; } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
-      background-image: linear-gradient(to right bottom, #98ffcb, #1d8b66); } }
+      background-image: linear-gradient(to right bottom, #B0FAD5, #43e68c); } }
   @media only screen and (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
@@ -528,7 +522,7 @@ body {
   position: fixed;
   top: 6.5rem;
   right: 6.5rem;
-  background-image: radial-gradient(#98ffcb, #1d8b66);
+  background-image: radial-gradient(#B0FAD5, #1d8b66);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   @media only screen and (max-width: 56.25em) {
@@ -569,7 +563,6 @@ body {
   padding: 1rem 2rem;
   color: #fff;
   text-decoration: none;
-  text-transform: uppercase;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
   background-size: 220%;
   transition: all .4s; }
@@ -635,7 +628,7 @@ body {
 .section-features {
   position: relative;
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, #98ffcb, #1d8b66);
+  background-image: linear-gradient(to right bottom, #B0FAD5, #43e68c);
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem; }
