--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -34,17 +34,17 @@
     }
     
     &--white {
-        background-color: $color-white;
+        background-color: $color-secondary;
         color: $color-grey-dark;
 
         &::after {
-            background-color: $color-white;
+            background-color: $color-secondary;
         }
     }
 
     &--green {
         background-color: $color-primary;
-        color: $color-white;
+        color: $color-secondary;
 
         &::after {
             background-color: $color-primary;
@@ -74,16 +74,16 @@
     &:link,
     &:visited {
         font-size: $default-font-size;
-        color: $color-primary;
+        color: $color-secondary;
         display: inline-block;
         text-decoration: none;
-        border-bottom: 1px solid $color-primary;
+        border-bottom: 1px solid $color-secondary;
         padding: 3px;
         transition: all .2s;
     }
 
     &:hover {
-        background-color: $color-primary;
+        background-color: $color-secondary;
         color: $color-white;
         box-shadow: 0 1rem 2rem rgba($color-black, .15);
         transform: translateY(-2px);
