--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,7 +3,7 @@
     background-image: linear-gradient(
         to right bottom,
         $color-primary-light,
-        $color-primary-dark);
+        $color-primary);
     background-size: cover;
     background-position: top;
     position: relative;
@@ -21,7 +21,7 @@
         background-image: linear-gradient(
             to right bottom,
             $color-primary-light,
-            $color-primary-dark);
+            $color-primary);
     }
 
     @include respond(phone) {
