--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,7 +14,7 @@
     background-image: linear-gradient(
         to right bottom,
         $color-primary-light,
-        $color-primary-dark);
+        $color-primary);
     background-size: cover;
     transform: skewY(-7deg);
     margin-top: -10rem;
