--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,15 @@ body {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
+.header__logo {
+  font-weight: bolder; }
+  .header__logo__name {
+    color: #767676;
+    font-size: 2rem; }
+  .header__logo__title {
+    color: #8277FF;
+    font-size: 1.25rem; }
+
 .heading-tertiary {
   font-size: 1.6rem;
   font-weight: 700; }
@@ -481,9 +490,25 @@ body {
     top: 4rem;
     left: 4rem; }
   .header__logo {
-    height: 4rem; }
-    .header__logo polyline {
-      stroke: #f7f7f7; }
+    width: 20rem; }
+    .header__logo__name {
+      width: 45%;
+      margin-right: 1rem;
+      float: left; }
+      .header__logo__name__box {
+        padding: 0 1rem 0 1rem;
+        display: block;
+        text-align: center;
+        border: 1px solid grey; }
+        .header__logo__name__box:not(:last-child) {
+          border-bottom: none; }
+    .header__logo__title {
+      width: 45%;
+      float: right;
+      padding: .5rem 0 .5rem 0; }
+      .header__logo__title p {
+        display: block;
+        width: 100%; }
   .header__text-box {
     position: absolute;
     top: 40%;
