--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -36,10 +36,39 @@
     }
 
     &__logo {
-        height: 4rem;
-        polyline {
-            stroke: $color-grey-light-1;
+
+        width: 20rem;
+
+        &__name {
+            width: 45%;
+            margin-right: 1rem;
+            float: left;
+
+            &__box {
+                padding: 0 1rem 0 1rem;
+                display: block;
+                text-align: center;
+                border: 1px solid grey;
+
+               &:not(:last-child) {
+                    border-bottom: none;
+               } 
+            }
         }
+
+        &__title {
+            width: 45%;
+            float: right;
+            padding: .5rem 0 .5rem 0;
+
+            p {
+                display: block;
+                width: 100%;
+            }
+
+        }
+
+        
     }
     
     &__text-box {
