started changing nav button

--- a/css/style.css
+++ b/css/style.css
@@ -515,10 +515,10 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
-.navigation__checkbox {
+.navburger__checkbox {
   display: none; }
 
-.navigation__button {
+.navburger__button {
   background-color: #fff;
   height: 7rem;
   width: 7rem;
@@ -531,34 +531,34 @@ body {
   text-align: center;
   cursor: pointer; }
   @media only screen and (max-width: 56.25em) {
-    .navigation__button {
+    .navburger__button {
       top: 4rem;
       right: 4rem; } }
   @media only screen and (max-width: 37.5em) {
-    .navigation__button {
+    .navburger__button {
       top: 3rem;
       right: 3rem; } }
 
-.navigation__background {
+.navburger__background {
   height: 6rem;
   width: 6rem;
   border-radius: 50%;
   position: fixed;
   top: 6.5rem;
   right: 6.5rem;
-  background-image: radial-gradient(#B0FAD5, #1d8b66);
+  background-image: radial-gradient(#B0FAD5, #43e68c);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   @media only screen and (max-width: 56.25em) {
-    .navigation__background {
+    .navburger__background {
       top: 4.5rem;
       right: 4.5rem; } }
   @media only screen and (max-width: 37.5em) {
-    .navigation__background {
+    .navburger__background {
       top: 3.5rem;
       right: 3.5rem; } }
 
-.navigation__nav {
+.navburger__nav {
   height: 100vh;
   position: fixed;
   top: 0;
@@ -568,7 +568,7 @@ body {
   width: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
-.navigation__list {
+.navburger__list {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -577,10 +577,10 @@ body {
   text-align: center;
   width: 100%; }
 
-.navigation__item {
+.navburger__item {
   margin: 1rem; }
 
-.navigation__link:link, .navigation__link:visited {
+.navburger__link:link, .navburger__link:visited {
   display: inline-block;
   font-size: 3rem;
   font-weight: 300;
@@ -590,54 +590,54 @@ body {
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
   background-size: 220%;
   transition: all .4s; }
-  .navigation__link:link span, .navigation__link:visited span {
+  .navburger__link:link span, .navburger__link:visited span {
     margin-right: 1.5rem;
     display: inline-block; }
 
-.navigation__link:hover, .navigation__link:active {
+.navburger__link:hover, .navburger__link:active {
   background-position: 100%;
   color: #43e68c;
   transform: translateX(1rem); }
 
-.navigation__checkbox:checked ~ .navigation__background {
+.navburger__checkbox:checked ~ .navburger__background {
   transform: scale(80); }
 
-.navigation__checkbox:checked ~ .navigation__nav {
+.navburger__checkbox:checked ~ .navburger__nav {
   opacity: 1;
   width: 100%; }
 
-.navigation__icon {
+.navburger__icon {
   position: relative;
   margin-top: 3.5rem; }
-  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+  .navburger__icon, .navburger__icon::before, .navburger__icon::after {
     width: 3rem;
     height: 2px;
     background-color: #333;
     display: inline-block; }
-  .navigation__icon::before, .navigation__icon::after {
+  .navburger__icon::before, .navburger__icon::after {
     content: "";
     position: absolute;
     left: 0;
     transition: all .2s; }
-  .navigation__icon::before {
+  .navburger__icon::before {
     top: -.8rem; }
-  .navigation__icon::after {
+  .navburger__icon::after {
     top: .8rem; }
 
-.navigation__button:hover .navigation__icon::before {
+.navburger__button:hover .navburger__icon::before {
   top: -1rem; }
 
-.navigation__button:hover .navigation__icon::after {
+.navburger__button:hover .navburger__icon::after {
   top: 1rem; }
 
-.navigation__checkbox:checked + .navigation__button .navigation__icon {
+.navburger__checkbox:checked + .navburger__button .navburger__icon {
   background-color: transparent; }
 
-.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+.navburger__checkbox:checked + .navburger__button .navburger__icon::before {
   top: 0;
   transform: rotate(135deg); }
 
-.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+.navburger__checkbox:checked + .navburger__button .navburger__icon::after {
   top: 0;
   transform: rotate(-135deg); }
 
