--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,7 @@ body {
     font-weight: 400;
     /*font-size: 16px;*/
     line-height: 1.7;
-    color: $color-grey-dark;
+    color: $font-color;
 }
 
 .heading-primary {
@@ -98,8 +98,4 @@ body {
     &:not(:last-child) {
         margin-bottom: 3rem;
     }
-}
-
-.footer__copyright {
-    font-size: 1rem;
 }
