logos resized, base margin removed

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -21,7 +21,8 @@ $color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 
-$font-color: #555555;
+$color-grey: #555555;
+$font-color: $color-grey;
 
 
 // FONT
