--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,7 @@ html {
       font-size: 75%; } }
 
 body {
-  box-sizing: border-box;
-  padding: 3rem; }
+  box-sizing: border-box; }
   @media only screen and (max-width: 56.25em) {
     body {
       padding: 0; } }
@@ -690,7 +689,11 @@ body {
 .section-tech {
   padding: 25rem 0 10rem 0; }
   .section-tech .tech-icon {
-    width: 9%;
+    width: 6rem;
     margin: 1.5rem; }
     .section-tech .tech-icon--sm {
-      width: 14%; }
+      width: 10rem; }
+  @media only screen and (min-width: 56.25em) {
+    .section-tech {
+      padding-left: 10rem;
+      padding-right: 10rem; } }
