--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -32,10 +32,15 @@
 .section-tech {
     padding: 25rem 0 10rem 0;
     .tech-icon {
-        width: 9%;
+        width: 6rem;
         margin: 1.5rem;
         &--sm {
-            width: 14%;
+            width: 10rem;
         }
+    }
+
+    @include respond(tab-or-bigger) {
+        padding-left: 10rem;
+        padding-right: 10rem;
     }
 }
