--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -24,7 +24,7 @@
         font-size: 6rem;
         margin-bottom: .5rem;
         display: inline-block;
-        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+        background-image: linear-gradient(to right, $color-primary, $color-primary);
         -webkit-background-clip: text;
         color: transparent;
 
