--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,8 @@ body {
   background-color: #333;
   padding: 4rem 0;
   font-size: 1.4rem;
-  color: #f7f7f7; }
+  color: #f7f7f7;
+  text-align: center; }
   @media only screen and (max-width: 56.25em) {
     .footer {
       padding: 8rem 0; } }
@@ -403,23 +404,17 @@ body {
       margin-right: 1.5rem; }
   .footer__link:link, .footer__link:visited {
     color: #f7f7f7;
-    background-color: #333;
     text-decoration: none;
-    display: inline-block;
+    display: inline-block; }
+  .footer__icon {
+    height: 2.5rem;
+    width: 2.5rem;
+    fill: #f7f7f7;
     transition: all .2s; }
-  .footer__link:hover, .footer__link:active {
-    color: #43e68c;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
-    transform: rotate(5deg) scale(1.3); }
-  .footer__copyright {
-    border-top: 1px solid #777;
-    padding-top: 2rem;
-    width: 80%;
-    float: right; }
-    @media only screen and (max-width: 56.25em) {
-      .footer__copyright {
-        width: 100%;
-        float: none; } }
+    .footer__icon:hover, .footer__icon:active {
+      fill: #8277FF;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+      transform: rotate(5deg) scale(1.3); }
 
 .row {
   max-width: 114rem;
