--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,6 +5,7 @@
     padding: 4rem 0;
     font-size: 1.4rem;
     color: $color-grey-light-1;
+    text-align: center;
 
     @include respond(tab-port) {
         padding: 8rem 0;
@@ -51,30 +52,25 @@
         &:link,
         &:visited {
             color: $color-grey-light-1;
-            background-color: $color-grey-dark-3;
             text-decoration: none;
             display: inline-block;
-            transition: all .2s;
+            
         }
+
+    }
+
+    &__icon {
+        height: 2.5rem;
+        width: 2.5rem;
+        fill: $color-grey-light-1;
+        transition: all .2s;
 
         &:hover,
         &:active {
-            color: $color-primary;
+            fill: $color-secondary;
             box-shadow: 0 1rem 2rem rgba($color-black, .4);
             transform: rotate(5deg) scale(1.3);
         }
     }
 
-
-    &__copyright {
-        border-top: 1px solid $color-grey-dark;
-        padding-top: 2rem;
-        width: 80%;
-        float: right;
-
-        @include respond(tab-port) {
-            width: 100%;
-            float: none;
-        }
-    }
 }
