--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -23,7 +23,8 @@ body {
         
         @include respond(phone) {
             letter-spacing: 1rem;
-            font-family: 5rem;
+            font-size: 3.5rem;
+            margin-top: 10rem;
         }
         /*
         animation-delay: 3s;
