--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$color-primary: #43e68c;
-$color-primary-light: #B0FAD5;
+$color-primary: #43e6bd;
+$color-primary-light: #b1fae8;
 $color-primary-dark: #1d8b66;
 
 $color-secondary-light: #ffb900;
