--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,8 +2,8 @@
     height: 85vh;
     background-image: linear-gradient(
         to right bottom,
-        $color-primary-light,
-        $color-primary);
+        $color-white,
+        $color-white);
     background-size: cover;
     background-position: top;
     position: relative;
@@ -20,8 +20,8 @@
             only screen and (min-width: 125em) {
         background-image: linear-gradient(
             to right bottom,
-            $color-primary-light,
-            $color-primary);
+            $color-white,
+            $color-white);
     }
 
     @include respond(phone) {
