--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,8 @@
 .section-about {
-    background-color: $color-grey-light-1;
+    background-image: linear-gradient(
+        to right bottom,
+        $color-primary-light,
+        $color-primary);
     padding: 25rem 0;
     margin-top: -20vh;
 
@@ -13,8 +16,8 @@
     padding: 20rem 0;
     background-image: linear-gradient(
         to right bottom,
-        $color-primary-light,
-        $color-primary);
+        $color-white,
+        $color-white);
     background-size: cover;
     transform: skewY(-7deg);
     margin-top: -10rem;
@@ -30,7 +33,12 @@
 }
 
 .section-tech {
+    background-image: linear-gradient(
+        to right bottom,
+        $color-primary-light,
+        $color-primary);
     padding: 25rem 0 10rem 0;
+    margin-top: -10rem;
     .tech-icon {
         width: 6rem;
         margin: 1.5rem;
