--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ body {
     display: block;
     font-size: 4rem;
     font-weight: 400;
+    letter-spacing: 1rem;
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
@@ -479,25 +480,9 @@ body {
     top: 4rem;
     left: 4rem; }
   .header__logo {
-    width: 20rem; }
-    .header__logo__name {
-      width: 45%;
-      margin-right: 1rem;
-      float: left; }
-      .header__logo__name__box {
-        padding: 0 1rem 0 1rem;
-        display: block;
-        text-align: center;
-        border: 1px solid grey; }
-        .header__logo__name__box:not(:last-child) {
-          border-bottom: none; }
-    .header__logo__title {
-      width: 45%;
-      float: right;
-      padding: .5rem 0 .5rem 0; }
-      .header__logo__title p {
-        display: block;
-        width: 100%; }
+    height: 4rem; }
+    .header__logo polyline {
+      stroke: #8277FF; }
   .header__text-box {
     position: absolute;
     top: 40%;
