--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -16,7 +16,7 @@ body {
         display: block;
         font-size: 4rem;
         font-weight: 400;
-    
+        letter-spacing: 1rem;
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
