header, feature bg color and img changed, header nav icon arrow added

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,7 +3,7 @@ $color-primary: #43e6bd;
 $color-primary-light: #b1fae8;
 $color-primary-dark: #1d8b66;
 
-$color-secondary-light: #ffb900;
+$color-secondary-light: #b5aeff;
 $color-secondary: #8277FF;
 $color-secondary-dark: #fa6257;
 
