--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ body {
     font-size: 3rem;
     font-weight: 700;
     letter-spacing: 1rem;
-    animation: moveInRight 1s ease-out;
-    color: #8277FF; }
+    color: #8277FF;
+    animation: moveInRight 1s ease-out; }
     @media only screen and (max-width: 37.5em) {
       .heading-primary--sub {
         letter-spacing: .5rem; } }
@@ -282,6 +282,15 @@ body {
 
 .btn-text--grey--repo {
   float: right; }
+
+.scroll-btn .scroll-btn__icon {
+  height: 3rem;
+  width: 3rem;
+  margin-top: 15rem;
+  transition: all .2s; }
+  .scroll-btn .scroll-btn__icon:hover {
+    fill: #8277FF;
+    transform: scale(1.3); }
 
 .composition {
   position: relative; }
@@ -459,7 +468,7 @@ body {
 
 .header {
   height: 85vh;
-  background-image: linear-gradient(to right bottom, #fff, #fff);
+  background-image: linear-gradient(to right bottom, rgba(177, 250, 232, 0.7), rgba(67, 230, 189, 0.7)), url(../img/brandi-redd.jpg);
   background-size: cover;
   background-position: top;
   position: relative; }
@@ -470,7 +479,7 @@ body {
       height: 95vh; } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
-      background-image: linear-gradient(to right bottom, #fff, #fff); } }
+      background-image: linear-gradient(to right bottom, rgba(177, 250, 232, 0.7), rgba(67, 230, 189, 0.7)), url(../img/brandi-redd.jpg); } }
   @media only screen and (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
@@ -646,7 +655,7 @@ body {
   transform: rotate(-135deg); }
 
 .section-about {
-  background-image: linear-gradient(to right bottom, #b1fae8, #43e6bd);
+  background-image: linear-gradient(to right bottom, #fff, #fff);
   padding: 25rem 0;
   margin-top: -20vh; }
   @media only screen and (max-width: 56.25em) {
@@ -656,7 +665,7 @@ body {
 .section-features {
   position: relative;
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, #fff, #fff);
+  background-image: linear-gradient(to right bottom, rgba(177, 250, 232, 0.7), rgba(67, 230, 189, 0.7)), url(../img/brandi-redd.jpg);
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem; }
@@ -667,7 +676,7 @@ body {
       padding: 10rem 0; } }
 
 .section-tech {
-  background-image: linear-gradient(to right bottom, #b1fae8, #43e6bd);
+  background-image: linear-gradient(to right bottom, #fff, #fff);
   padding: 25rem 0 10rem 0;
   margin-top: -10rem; }
   .section-tech .tech-icon {
