--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -123,3 +123,20 @@
     }
 }
 
+.scroll-btn {
+    
+    
+
+    .scroll-btn__icon {
+        height: 3rem;
+        width: 3rem;
+        margin-top: 15rem;
+        transition: all .2s;
+
+        &:hover {
+            fill: $color-secondary;
+            transform: scale(1.3);
+        }
+    }
+    
+}
