--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,8 +2,9 @@
     height: 85vh;
     background-image: linear-gradient(
         to right bottom,
-        $color-white,
-        $color-white);
+        rgba($color-primary-light, 0.7),
+        rgba($color-primary, 0.7)),
+    url(../img/brandi-redd.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
@@ -20,8 +21,9 @@
             only screen and (min-width: 125em) {
         background-image: linear-gradient(
             to right bottom,
-            $color-white,
-            $color-white);
+            rgba($color-primary-light, 0.7),
+            rgba($color-primary, 0.7)),
+        url(../img/brandi-redd.jpg);
     }
 
     @include respond(phone) {
