--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,8 @@
 .section-about {
     background-image: linear-gradient(
         to right bottom,
-        $color-primary-light,
-        $color-primary);
+        $color-white,
+        $color-white);
     padding: 25rem 0;
     margin-top: -20vh;
 
@@ -16,8 +16,9 @@
     padding: 20rem 0;
     background-image: linear-gradient(
         to right bottom,
-        $color-white,
-        $color-white);
+        rgba($color-primary-light, 0.7),
+        rgba($color-primary, 0.7)),
+    url(../img/brandi-redd.jpg);
     background-size: cover;
     transform: skewY(-7deg);
     margin-top: -10rem;
@@ -35,8 +36,8 @@
 .section-tech {
     background-image: linear-gradient(
         to right bottom,
-        $color-primary-light,
-        $color-primary);
+        $color-white,
+        $color-white);
     padding: 25rem 0 10rem 0;
     margin-top: -10rem;
     .tech-icon {
