padding added to body, contact nav link fixed

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -35,6 +35,10 @@
         &:active {
             color: $color-secondary;
         }
+
+        .active {
+            color: red;
+        }
     }
       
 }
