--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,8 @@
 .section-about {
     background-image: linear-gradient(
         to right bottom,
-        $color-white,
-        $color-white);
+        $color-grey-light-1,
+        $color-grey-light-1);
     padding: 25rem 0;
     margin-top: -20vh;
 
