--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,8 @@ html {
       font-size: 75%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
   @media only screen and (max-width: 56.25em) {
     body {
       padding: 0; } }
@@ -286,7 +287,6 @@ body {
 .scroll-btn .scroll-btn__icon {
   height: 3rem;
   width: 3rem;
-  margin-top: 15rem;
   transition: all .2s; }
   .scroll-btn .scroll-btn__icon:hover {
     fill: #8277FF;
@@ -422,7 +422,7 @@ body {
     fill: #f7f7f7;
     transition: all .2s; }
     .footer__icon:hover, .footer__icon:active {
-      fill: #8277FF;
+      fill: #43e6bd;
       box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
       transform: rotate(5deg) scale(1.3); }
 
@@ -523,6 +523,8 @@ body {
       display: inline-block; }
   .main-nav__link:hover, .main-nav__link:active {
     color: #8277FF; }
+  .main-nav__link .active {
+    color: red; }
 
 .navburger__checkbox {
   display: none; }
@@ -655,7 +657,7 @@ body {
   transform: rotate(-135deg); }
 
 .section-about {
-  background-image: linear-gradient(to right bottom, #fff, #fff);
+  background-image: linear-gradient(to right bottom, #f7f7f7, #f7f7f7);
   padding: 25rem 0;
   margin-top: -20vh; }
   @media only screen and (max-width: 56.25em) {
