--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -67,7 +67,7 @@
 
         &:hover,
         &:active {
-            fill: $color-secondary;
+            fill: $color-primary;
             box-shadow: 0 1rem 2rem rgba($color-black, .4);
             transform: rotate(5deg) scale(1.3);
         }
