responsive nav background changed

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
 $color-primary: #43e6bd;
 $color-primary-light: #b1fae8;
-$color-primary-dark: #1d8b66;
+$color-primary-dark: #50af90;
 
 $color-secondary-light: #b5aeff;
 $color-secondary: #8277FF;
