--- a/css/style.css
+++ b/css/style.css
@@ -560,7 +560,7 @@ body {
   position: fixed;
   top: 6.5rem;
   right: 6.5rem;
-  background-image: radial-gradient(#b1fae8, #43e6bd);
+  background-image: radial-gradient(#43e6bd, #50af90);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   @media only screen and (max-width: 56.25em) {
