--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -82,7 +82,7 @@
         position: fixed;
         top: 6.5rem;
         right: 6.5rem;
-        background-image: radial-gradient($color-primary-light, $color-primary);
+        background-image: radial-gradient($color-primary, $color-primary-dark);
         z-index: 1000;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
